# sol

./: .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
cmake/: sol-config.cmake.in
contrib/: CMakeLists.txt
include/sol/: bsdfs.h  cameras.h  color.h  geometry.h  image.h  lights.h  render_job.h  renderer.h  samplers.h  scene.h  shapes.h  textures.h  triangle_mesh.h
include/sol/algorithms/: path_tracer.h
include/sol/formats/: exr.h
src/: CMakeLists.txt  bsdfs.cpp  cameras.cpp  image.cpp  lights.cpp  render_job.cpp  scene.cpp  scene_loader.cpp  scene_loader.h  shapes.cpp  textures.cpp  toml_parser.cpp  toml_parser.h  triangle_mesh.cpp
src/algorithms/: path_tracer.cpp
src/formats/: exr.cpp  jpeg.cpp  jpeg.h  obj.cpp  obj.h  png.cpp  png.h  tiff.cpp  tiff.h
test/: CMakeLists.txt  driver.cpp
test/data/: copyright.txt  cornell_box.toml  cornell_box_glossy.mtl  cornell_box_glossy.toml  cornell_box_specular.toml  cornell_box_specular.yml  cornell_box_water.mtl  cornell_box_water.toml  render_cornell.toml
